src/test/resources/typeSystemTestModels/valid/expressions/PrimaryAccess.java
package typeSystemTestModels.valid.expressions;

public class PrimaryAccess {
  int a = 0;
  int b = a;
}
