src/test/resources/typeSystemTestModels/invalid/expressions/SubtypingRelation.java
package typeSystemTestModels.invalid.expressions;

public class SubtypingRelation {

  
}
